fix category selector on mobile

--- a/public/app/stylesheets/modules/_mod-categories-selector.scss
+++ b/public/app/stylesheets/modules/_mod-categories-selector.scss
@@ -28,7 +28,7 @@
 
     .father {
       display: block;
-      padding: 6px 20px;
+      padding: 6px 15%;
       font-weight: lighter;
       @include border-radius(18px);
     }
@@ -42,7 +42,7 @@
       padding: 0;
       cursor: default;
       a {
-        padding: 5px 20px;
+        padding: 5px 0 0 20px;
         font-weight: normal;
       }
     }
